--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,4 +1,4 @@
-#page {
+#login-page {
     background: 
     linear-gradient(
         #008035de,
@@ -8,6 +8,7 @@
     background-size: cover; 
     background-repeat: no-repeat;
     margin: 0;
+    text-align: center;
     /* position: relative; */
 }
 
@@ -16,8 +17,10 @@ cover-lay {
 
 }
 
-.row{
-    margin: 0;
+.login-row{
+    text-align: center;
+    width: 70%;
+
 }
 .right-col{
     background-color: transparent;
@@ -28,10 +31,8 @@ cover-lay {
 
 .form-col{
     position: relative;
-    border: 2px solid rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
     mix-blend-mode: lighten;
-    min-height: 100%;
+    min-height: 50vh;
     border-radius: 10px;
     text-align: center;
 }
