--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -8,6 +8,7 @@
     background-size: cover; 
     background-repeat: no-repeat;
     margin: 0;
+    /* height: 100%; */
     /* position: relative; */
 }
 
